365 ==> 185638 - digiKam crash on startup.
366 ==> 350404 - digiKam crashes at startup.
367 ==> 301583 - digiKam crash on preview avi.
368 ==> 236960 - No video in digiKam embedded viewer no way to change codec?
369 ==> 227113 - digiKam crashes when selecting a movie.
370 ==> 274333 - digiKam crashed upon startup.
371 ==> 247019 - digiKam crashes in Album view with Canon IXUS 90 video clip.
372 ==> 238525 - digiKam crashes on browsing in album view.
373 ==> 317437 - digiKam crashes on startup.
374 ==> 237183 - digiKam crashes on playing Quicktime movies.
375 ==> 256644 - digiKam crashes after adding photos to light table.
376 ==> 245033 - digiKam falls on video files.
377 ==> 252411 - digiKam crashes when .AVI videoclip is launched.
378 ==> 247399 - digiKam crashes when viewing videos.
379 ==> 261706 - digiKam crashed after downloading pictures.
380 ==> 172170 - digiKam embedded video player - video not synchronized with sound.
381 ==> 293173 - digiKam does not play videos.
382 ==> 182401 - Wrong color palette on playback videos within digiKam.
383 ==> 219419 - digiKam crashes after splash screen with PTP.
384 ==> 397565 - Unable to launch in OS X after install.
385 ==> 337978 - digiKam crashes on startup - always.
386 ==> 215673 - digiKam movie no preview.
387 ==> 204481 - digikam: Wizard not translated in French.
388 ==> 365694 - digiKam 5.0.0 : every menus are in French, excepted the menu bar.
389 ==> 394434 - Installation problem mysql internal on mac os high sierra [patch].
390 ==> 397696 - [Website] On Fedora, use dnf instead of yum.
391 ==> 392970 - Website: Mention KDE Familly.
392 ==> 394694 - Showfoto crashes on change picture size.
393 ==> 326006 - digiKam Raw engine generates pink & black stripe on the right.
394 ==> 379984 - ASSERT failure in Q_GLOBAL_STATIC: "The global static was used after being destroyed".
395 ==> 373572 - File synchronization.
396 ==> 296768 - When creating thumbnails, digiKam uses 80% CPU - quadcore 3800, 9GB RAM.
397 ==> 