@@ -455,4 +455,5 @@ BUGFIXES:
 394 ==> 379984 - ASSERT failure in Q_GLOBAL_STATIC: "The global static was used after being destroyed".
 395 ==> 373572 - File synchronization.
 396 ==> 296768 - When creating thumbnails, digiKam uses 80% CPU - quadcore 3800, 9GB RAM.
-397 ==> 
+397 ==> 397777 - Need to default to native filesystem browser on first run to see external drives.
+398 ==> 
